[gd_scene load_steps=21 format=4 uid="uid://jseobcelaeg8"]

[ext_resource type="Texture2D" uid="uid://dduxljaidt7uq" path="res://Sprites/Tile/House_Inside-1.png.png" id="1_0nyi8"]
[ext_resource type="Texture2D" uid="uid://bs47v4et8o8x1" path="res://Sprites/Tile/New Piskel-1.png.png" id="2_35742"]
[ext_resource type="PackedScene" uid="uid://cmopqf4qly815" path="res://Scenes/player_house.tscn" id="3_g15sb"]
[ext_resource type="Script" path="res://Script/exit_door.gd" id="4_4x46m"]
[ext_resource type="Script" path="res://Script/comp_intr.gd" id="5_fuaj8"]
[ext_resource type="PackedScene" uid="uid://c3ol6crmmj8xo" path="res://interact.tscn" id="6_3syin"]
[ext_resource type="Script" path="res://Script/computer.gd" id="6_agigy"]
[ext_resource type="Texture2D" uid="uid://ckl6c56qw7m3t" path="res://Sprites/Comp_Sprites/News_Screen-1.png.png" id="7_ils4j"]
[ext_resource type="Texture2D" uid="uid://cp0yi65ttrbok" path="res://Sprites/Comp_Sprites/Icons_Tile.png" id="8_xx27p"]
[ext_resource type="Texture2D" uid="uid://b5g7v0omy8duw" path="res://Sprites/Comp_Sprites/Close-1.png.png" id="9_wehv7"]
[ext_resource type="Texture2D" uid="uid://bk5q35jgkiv0t" path="res://Sprites/Comp_Sprites/mouse_over-1.png.png" id="10_2h4td"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rr2pb"]
texture = ExtResource("1_0nyi8")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(6, 4)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 48)
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-89.5, -81, 30.5, -103, 93.5, -80.5, 86.5, 16, 85, 16, 86.5, -76.5, 32, -95, -83.5, -75.5, -81, 16, -82.5, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4xlwg"]
texture = ExtResource("2_35742")
texture_region_size = Vector2i(32, 32)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:6/0 = 0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/size_in_atlas = Vector2i(3, 6)
10:0/0 = 0
8:3/size_in_atlas = Vector2i(2, 1)
8:3/0 = 0
5:4/size_in_atlas = Vector2i(3, 2)
5:4/0 = 0
0:0/size_in_atlas = Vector2i(7, 4)
0:0/0 = 0
4:5/0 = 0
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSet" id="TileSet_uwink"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rr2pb")
sources/1 = SubResource("TileSetAtlasSource_4xlwg")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqtjn"]
size = Vector2(34, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s16mn"]
size = Vector2(44, 64)

[sub_resource type="LabelSettings" id="LabelSettings_k3bo5"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xo3n1"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yw8wk"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_77u6j"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="House" type="Node2D"]

[node name="WorldHM" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="WorldHM"]
offset_right = 960.0
offset_bottom = 640.0
size_flags_horizontal = 0
size_flags_vertical = 8
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMapLayer" type="TileMapLayer" parent="WorldHM"]
tile_map_data = PackedByteArray("AAAOAAoAAAAAAAAAAAAKAAcAAQAAAAYAAAAKAAgAAQAAAAYAAAAKAAkAAQAAAAYAAAAKAAoAAQAAAAYAAAAMAAsAAQAAAAYAAAANAAsAAQAAAAYAAAAOAAsAAQAAAAYAAAAPAAsAAQAAAAYAAAAQAAsAAQAAAAYAAAARAAsAAQAAAAYAAAASAAsAAQAAAAYAAAASAAoAAQAAAAYAAAASAAkAAQAAAAYAAAASAAgAAQAAAAYAAAASAAcAAQAAAAYAAAASAAYAAQAAAAYAAAARAAYAAQAAAAYAAAAQAAYAAQAAAAYAAAAPAAYAAQAAAAYAAAAOAAYAAQAAAAYAAAANAAYAAQAAAAYAAAAMAAYAAQAAAAYAAAALAAYAAQAAAAYAAAAKAAYAAQAAAAYAAAAKAAsAAQAAAAYAAAALAAsAAQAAAAYAAAA=")
tile_set = SubResource("TileSet_uwink")

[node name="PlayerHouse" parent="WorldHM" instance=ExtResource("3_g15sb")]
position = Vector2(425, 320)

[node name="Leave_" type="Node2D" parent="WorldHM"]

[node name="Exit_door" type="Area2D" parent="WorldHM/Leave_"]
script = ExtResource("4_4x46m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldHM/Leave_/Exit_door"]
position = Vector2(425, 320)
shape = SubResource("RectangleShape2D_oqtjn")
debug_color = Color(0.642417, 0, 0.102819, 0.42)

[node name="Interact" parent="WorldHM/Leave_/Exit_door" instance=ExtResource("6_3syin")]
visible = false
position = Vector2(425, 272)

[node name="Computer" type="Node2D" parent="WorldHM"]

[node name="Comp_Intr" type="Area2D" parent="WorldHM/Computer"]
script = ExtResource("5_fuaj8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldHM/Computer/Comp_Intr"]
position = Vector2(494, 320)
shape = SubResource("RectangleShape2D_s16mn")
debug_color = Color(0.582646, 0.542473, 0.275978, 0.42)

[node name="Interact" parent="WorldHM/Computer/Comp_Intr" instance=ExtResource("6_3syin")]
visible = false
position = Vector2(494, 272)

[node name="Computer" type="Control" parent="WorldHM/Computer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_agigy")
metadata/_edit_use_anchors_ = true

[node name="Screen" type="Control" parent="WorldHM/Computer/Computer"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="WorldHM/Computer/Computer/Screen"]
layout_mode = 0
offset_left = 288.0
offset_top = 192.0
offset_right = 672.0
offset_bottom = 448.0
texture = ExtResource("7_ils4j")

[node name="TextureRect2" type="TextureRect" parent="WorldHM/Computer/Computer/Screen"]
layout_mode = 0
offset_left = 640.0
offset_top = 192.0
offset_right = 656.0
offset_bottom = 200.0
texture = ExtResource("8_xx27p")

[node name="Close" type="TextureButton" parent="WorldHM/Computer/Computer/Screen"]
layout_mode = 0
offset_left = 659.0
offset_top = 192.0
offset_right = 667.0
offset_bottom = 200.0
texture_normal = ExtResource("9_wehv7")
texture_hover = ExtResource("10_2h4td")

[node name="New1" type="Control" parent="WorldHM/Computer/Computer/Screen"]
anchors_preset = 0

[node name="Title" type="Label" parent="WorldHM/Computer/Computer/Screen/New1"]
layout_mode = 0
offset_left = 416.0
offset_top = 288.0
offset_right = 535.0
offset_bottom = 300.0
text = "REVOLUTUON STRIKES AGAIN!!"
label_settings = SubResource("LabelSettings_k3bo5")

[node name="Text+New" type="Label" parent="WorldHM/Computer/Computer/Screen/New1"]
layout_mode = 0
offset_left = 416.0
offset_top = 300.0
offset_right = 659.0
offset_bottom = 352.0
text = "A important tower managed by the army group, was attacked 
last night, caused by a revolutional group that stills unknowing
the authorits are shearching for any info about them."
label_settings = SubResource("LabelSettings_xo3n1")

[node name="Node" type="Control" parent="WorldHM/Computer/Computer/Screen"]
anchors_preset = 0

[node name="Title2" type="Label" parent="WorldHM/Computer/Computer/Screen/Node"]
layout_mode = 0
offset_left = 416.0
offset_top = 352.0
offset_right = 618.0
offset_bottom = 364.0
text = "LEADER FROM THE ARMY RESPONDED THE ATTACKS "
label_settings = SubResource("LabelSettings_yw8wk")

[node name="Text2" type="Label" parent="WorldHM/Computer/Computer/Screen/Node"]
layout_mode = 0
offset_left = 416.0
offset_top = 364.0
offset_right = 456.0
offset_bottom = 387.0
text = "After the amount of cases from the new moviment happening,
the leader said that they will take \"care\" of them and will not
be tolerated this type of action."
label_settings = SubResource("LabelSettings_77u6j")

[connection signal="body_entered" from="WorldHM/Leave_/Exit_door" to="WorldHM/Leave_/Exit_door" method="_on_body_entered"]
[connection signal="body_exited" from="WorldHM/Leave_/Exit_door" to="WorldHM/Leave_/Exit_door" method="_on_body_exited"]
[connection signal="body_entered" from="WorldHM/Computer/Comp_Intr" to="WorldHM/Computer/Comp_Intr" method="_on_body_entered"]
[connection signal="body_exited" from="WorldHM/Computer/Comp_Intr" to="WorldHM/Computer/Comp_Intr" method="_on_body_exited"]
[connection signal="pressed" from="WorldHM/Computer/Computer/Screen/Close" to="WorldHM/Computer/Computer" method="_on_close_pressed"]
